<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:text="@string/sort"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radiog_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <RadioButton
            android:id="@+id/radio_sort_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="7dp"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="right|center_vertical"
            android:text="@string/sort_by_name"
            android:textColor="#404040"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio_sort_by_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="7dp"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="right|center_vertical"
            android:text="@string/sort_by_createdate"
            android:textColor="#404040"
            android:textSize="17sp" />


        <RadioButton
            android:id="@+id/radio_sort_by_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="7dp"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="right|center_vertical"
            android:text="@string/sort_by_size"
            android:textColor="#404040"
            android:textSize="17sp" />
    </RadioGroup>
</LinearLayout>