<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_grey_100"
    android:orientation="vertical"
    android:weightSum="4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:layout_weight="1.5">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:clickable="false"
            android:src="@drawable/ic_profile" />

        <ImageView
            android:id="@+id/img_add_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_profile"
            android:layout_alignEnd="@+id/img_profile"
            android:layout_alignRight="@+id/img_profile"
            android:src="@drawable/add" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_first_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.70">

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000000" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_last_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.70">

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:singleLine="true"
            android:textColor="#000000" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.70">

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:singleLine="true"
            android:textColor="#000000" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="#125688"
        android:text="@string/confirm"
        android:textColor="@android:color/white" />
</LinearLayout>